--- a/src/wrapper/MarkdownWrap/index.scss
+++ b/src/wrapper/MarkdownWrap/index.scss
@@ -1,7 +1,7 @@
 $primary-color: #dec6fb;
 
 .markdown_body {
-  padding: 2rem 2rem;
+  min-height: 100%;
   color: #595959;
   line-height: 1.75;
   letter-spacing: 1px;
@@ -213,7 +213,7 @@ $primary-color: #dec6fb;
   }
 
   .post_info {
-    @apply flex justify-center flex-wrap mt-4;
+    @apply flex justify-center flex-wrap my-8;
     .post_info_comment {
       @apply text-sm text-teal-500 pl-1;
     }
