--- a/src/assets/icons/Spinner/Spinner.scss
+++ b/src/assets/icons/Spinner/Spinner.scss
@@ -8,7 +8,7 @@
   }
 }
 
-@keyframes delayShow {
+@keyframes delay-show {
   0%,
   50% {
     opacity: 0;
@@ -19,8 +19,8 @@
   }
 }
 
-.Spinner {
-  animation: delayShow 0.4s linear both;
+.spinner {
+  animation: delay-show 0.4s linear both;
 
   svg {
     animation: rotate 0.6s linear infinite;
