--- a/src/components/Tooltip/index.scss
+++ b/src/components/Tooltip/index.scss
@@ -1,6 +1,6 @@
 @import 'src/global';
 
-$bg: rgba(0, 0, 0, 0.65);
+$bg: rgb(0 0 0 / 65%);
 
 .pointer {
   @extend .pointer;
@@ -16,12 +16,14 @@ $bg: rgba(0, 0, 0, 0.65);
     background-color: $bg;
     border: none;
     border-radius: 2px;
+
     .arrow {
       bottom: -0.5rem;
       left: 50%;
       z-index: 1000;
       transform: translateX(-50%);
       @apply absolute block w-4 h-2 overflow-hidden;
+
       .content {
         width: 0.4rem;
         height: 0.4rem;
