chore: 其实没大动

--- a/src/components/Icon/index.scss
+++ b/src/components/Icon/index.scss
@@ -3,6 +3,7 @@
   width: 1em;
   height: 1em;
   overflow: hidden;
-  vertical-align: -0.25em;
+  vertical-align: -0.2em;
   fill: currentColor;
+  @apply mx-1;
 }
