--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --py-tooltip-bg-color: rgb(0 0 0 / 65%);
+  --py-tooltip-z-index: 1000;
+
+  #py-notification-collection {
+    @apply fixed right-8 top-8;
+
+    z-index: var(--notification-z-index);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+}
