feat: add Dialog and Button

--- a/src/components/Skeleton/index.scss
+++ b/src/components/Skeleton/index.scss
@@ -18,7 +18,7 @@ $skeleton-to-color: --custom-shade($skeleton-color, 5%);
     background-size: 400% 100%;
     border-radius: 5px;
     animation: skeleton-loading 1.4s ease infinite;
-    @apply h-4 my-4 mx-8;
+    @apply h-4 my-4;
 
     &:first-child {
       @apply w-1/2;
