--- a/src/components/Icon/index.scss
+++ b/src/components/Icon/index.scss
@@ -1,8 +1,7 @@
-.py-super-icon {
+.py-icon {
   width: 1em;
   height: 1em;
   overflow: hidden;
-  vertical-align: -0.15em;
+  vertical-align: middle;
   fill: currentcolor;
-  @apply mx-1;
 }
