feat: components -> checkbox

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,12 +7,16 @@
   --py-tooltip-z-index: 1000;
   --py-notification-z-index: 1000;
 
+  // checkbox radio bg color
+  --checkbox-radio-bg-color: rgba(33, 16, 118);
+  --checkbox-radio-bg-color-hover: rgba(33, 16, 118, 0.5);
+
   //
   --theme-bg-color: rgba(16 18 27 / 40%);
   --border-color: rgba(113 119 144 / 25%);
   --theme-color: #f9fafb;
   --inactive-color: rgb(113 119 144 / 78%);
-  --body-font: "Poppins", sans-serif;
+  --body-font: 'Poppins', sans-serif;
   --hover-menu-bg: rgba(12 15 25 / 30%);
   --content-title-color: #999ba5;
   --content-bg: rgb(146 151 179 / 13%);
@@ -20,7 +24,7 @@
   --dropdown-bg: #21242d;
   --dropdown-hover: rgb(42 46 60);
   --popup-bg: rgb(22 25 37);
-  --search-bg:  #14162b;
+  --search-bg: #14162b;
   --overlay-bg: rgba(36, 39, 59, 0.3);
   --scrollbar-bg: rgb(1 2 3 / 40%);
 
