--- a/src/components/Checkbox/index.scss
+++ b/src/components/Checkbox/index.scss
@@ -1,27 +1,72 @@
-.py-checkbox {
-  position: relative;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  transition: background 150ms ease;
-  border: 2px solid #211076;
-  border-radius: 3px;
+@keyframes wiggle {
+  from {
+    transform: scale(1, 1);
+  }
+  30% {
+    transform: scale(1.25, 0.75);
+  }
+  40% {
+    transform: scale(0.75, 1.25);
+  }
+  50% {
+    transform: scale(1.15, 0.85);
+  }
+  65% {
+    transform: scale(0.95, 1.05);
+  }
+  75% {
+    transform: scale(1.05, 0.95);
+  }
+  to {
+    transform: scale(1, 1);
+  }
+}
 
-  &:hover {
-    background: rgba(33, 16, 118, 0.5);
+.py-checkbox {
+  opacity: 0;
+  position: relative;
+
+  &__checked {
+    display: none;
   }
 
-  &:after {
+  &__indeterminate {
+    display: none;
+  }
+
+  &__marker {
     position: absolute;
-    top: 1px;
-    left: 5px;
-    width: 6px;
-    height: 12px;
-    content: '';
-    transition: all 325ms ease;
-    transform: rotate(45deg) scale(0);
-    opacity: 0;
-    border-right: 2px solid #bf6bfe;
-    border-bottom: 2px solid #bf6bfe;
+    inset: 0;
+    height: 100%;
+    aspect-ratio: 1 / 1;
+    border: 2px solid var(--checkbox-radio-bg-color);
+    border-radius: 2px;
+  }
+
+  &:not(:checked, :indeterminate) + &__marker {
+    &:hover {
+      background-color: var(--checkbox-radio-bg-color-hover);
+    }
+  }
+
+  &:is(:checked, :indeterminate) + &__marker {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--checkbox-radio-bg-color);
+  }
+
+  &:checked + &__marker {
+    animation: wiggle 0.4s ease;
+  }
+
+  &:checked + &__marker > &__checked {
+    display: inline-block;
+    color: white;
+  }
+
+  &:indeterminate + &__marker > &__indeterminate {
+    display: inline-block;
+    color: white;
   }
 }
