--- a/src/components/Icon/index.scss
+++ b/src/components/Icon/index.scss
@@ -2,6 +2,6 @@
   width: 1em;
   height: 1em;
   overflow: hidden;
-  vertical-align: middle;
-  fill: currentcolor;
+  fill: currentColor;
+  display: inline;
 }
