--- a/site/app.scss
+++ b/site/app.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import 'https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap';
 
 html,
 body,
@@ -46,6 +46,8 @@ body,
   &-menu {
     display: flex;
     align-items: center;
+    height: 100%;
+
     a {
       padding: 17px 30px;
       text-decoration: none;
@@ -57,10 +59,9 @@ body,
           display: none;
         }
       }
-      &.is-active,
+
       &:hover {
         color: var(--theme-color);
-        border-bottom: 2px solid var(--theme-color);
       }
     }
   }
@@ -68,7 +69,8 @@ body,
 
 .notify {
   position: relative;
-  &:before {
+
+  &::before {
     content: '';
     position: absolute;
     background-color: #3a6df0;
@@ -78,6 +80,7 @@ body,
     right: 20px;
     top: 16px;
   }
+
   @media screen and (max-width: 1055px) {
     display: none;
   }
@@ -103,6 +106,7 @@ body,
   max-width: 400px;
   padding-left: 16px;
   border-radius: 4px;
+
   input {
     width: 100%;
     height: 100%;
@@ -119,12 +123,14 @@ body,
     background-repeat: no-repeat;
     background-position: 16px 48%;
     color: var(--theme-color);
+
     &::placeholder {
       font-family: var(--body-font);
       color: var(--inactive-color);
       font-size: 15px;
       font-weight: 500;
     }
+
     outline: none;
   }
 }
@@ -135,34 +141,11 @@ body,
   padding: 0 16px 0 40px;
   margin-left: auto;
   flex-shrink: 0;
+
   svg {
     width: 22px;
     color: #f9fafb;
     flex-shrink: 0;
-  }
-}
-
-.notification {
-  position: relative;
-  &-number {
-    position: absolute;
-    background-color: #3a6df0;
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    font-size: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    right: -6px;
-    top: -6px;
-  }
-  & + svg {
-    margin-left: 22px;
-    @media screen and (max-width: 945px) {
-      display: none;
-    }
   }
 }
 
@@ -180,6 +163,7 @@ body,
   .header-profile {
     display: none;
   }
+
   .search-bar {
     max-width: 600px;
     margin: auto;
@@ -187,6 +171,7 @@ body,
     box-shadow: 0 0 0 1px var(--border-color);
     padding-left: 0;
   }
+
   .menu-circle {
     margin-right: 0;
   }
