--- a/src/components/Icon/index.scss
+++ b/src/components/Icon/index.scss
@@ -2,6 +2,6 @@
   width: 1em;
   height: 1em;
   overflow: hidden;
-  fill: currentColor;
-  display: inline;
+  fill: currentcolor;
+  display: inline-block;
 }
