--- a/src/components/Radio/index.scss
+++ b/src/components/Radio/index.scss
@@ -18,9 +18,8 @@
       height: 70%;
       background-color: var(--checkbox-radio-bg-color);
       border-radius: 100%;
-      transition: transform 0.4s ease, opacity 0.2s ease;
+      transition: all 0.2s ease;
       transform-origin: center;
-      isolation: isolate;
     }
   }
 
@@ -33,7 +32,7 @@
 
   &:not(:checked) + &__marker {
     .py-radio-dot {
-      transform: scale(0.8);
+      transform: scale(0.3);
       opacity: 0;
     }
   }
