--- a/src/components/RippleEffect/index.scss
+++ b/src/components/RippleEffect/index.scss
@@ -1,5 +1,5 @@
 @keyframes ripple-animation {
-  from {
+  0% {
     transform: scale(0);
     opacity: 1;
   }
@@ -8,7 +8,7 @@
     opacity: 1;
   }
 
-  to {
+  100% {
     opacity: 0;
     transform: scale(2);
   }
