--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@
   // checkbox radio bg color
   --checkbox-radio-bg-color: rgb(33 16 118);
   --checkbox-radio-bg-color-hover: rgb(33 16 118 / 50%);
+  --tooltip-bg-color: rgb(97 97 97 / 92%);
 
   //
   --theme-bg-color: rgba(16 18 27 / 40%);
@@ -17,7 +18,8 @@
   --theme-color: #f9fafb;
   --inactive-color: rgb(113 119 144 / 78%);
   --body-font: 'Poppins', sans-serif;
-  --hover-menu-bg: rgba(12 15 25 / 30%);
+  --hover-menu-bg: rgba(12 15 25 / 15%);
+  --active-menu-bg: rgba(16 18 27 / 40%);
   --content-title-color: #999ba5;
   --content-bg: rgb(146 151 179 / 13%);
   --button-inactive: rgb(249 250 251 / 55%);
