--- a/site/app.scss
+++ b/site/app.scss
@@ -3,7 +3,7 @@
 html,
 body,
 #root {
-  font-family: 'Poppins', sans-serif;
+  font-family: var(--body-font);
   font-size: 14px;
   @apply h-full w-full;
 }
@@ -18,7 +18,7 @@ body,
   .main {
     background-color: var(--theme-bg-color);
     backdrop-filter: blur(20px);
-    @apply m-11 w-full rounded-2xl;
+    @apply my-11 mx-auto rounded-2xl;
 
     .left-side {
       overflow: auto;
@@ -110,7 +110,6 @@ body,
     border-radius: 4px;
     font-family: var(--body-font);
     font-size: 15px;
-    font-weight: 500;
     padding: 0 20px 0 40px;
     box-shadow: 0 0 0 2px rgb(134 140 160 / 2%);
     background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56.966 56.966' fill='%23717790c7'%3e%3cpath d='M55.146 51.887L41.588 37.786A22.926 22.926 0 0046.984 23c0-12.682-10.318-23-23-23s-23 10.318-23 23 10.318 23 23 23c4.761 0 9.298-1.436 13.177-4.162l13.661 14.208c.571.593 1.339.92 2.162.92.779 0 1.518-.297 2.079-.837a3.004 3.004 0 00.083-4.242zM23.984 6c9.374 0 17 7.626 17 17s-7.626 17-17 17-17-7.626-17-17 7.626-17 17-17z'/%3e%3c/svg%3e");
@@ -123,7 +122,6 @@ body,
       font-family: var(--body-font);
       color: var(--inactive-color);
       font-size: 15px;
-      font-weight: 500;
     }
 
     outline: none;
