--- a/src/components/Radio/index.scss
+++ b/src/components/Radio/index.scss
@@ -23,6 +23,10 @@
     }
   }
 
+  &:focus-visible + &__marker {
+    outline: #3a6df0 auto 1px;
+  }
+
   &:checked + &__marker {
     .py-radio-dot {
       transform: scale(1);
