--- a/src/components/Switch/index.scss
+++ b/src/components/Switch/index.scss
@@ -1,14 +1,14 @@
 .py-switch {
+  position: absolute;
   opacity: 0;
   cursor: pointer;
 
   &__marker {
-    position: relative;
     width: 70px;
     height: 30px;
     display: flex;
     align-items: center;
-    border-radius: 100px;
+    border-radius: 30px;
 
     &::before {
       position: absolute;
@@ -17,6 +17,7 @@
       font-size: 1em;
       line-height: 30px;
       text-align: center;
+      transition: all 0.4s ease;
     }
 
     .py-switch-dot {
@@ -26,8 +27,6 @@
       background-color: var(--checkbox-radio-bg-color);
       border-radius: 100%;
       transition: all 0.4s ease;
-      transform-origin: center;
-      isolation: isolate;
     }
   }
 
@@ -45,6 +44,8 @@
 
     &::before {
       content: attr(data-checked-desc);
+      right: 100%;
+      transform: translateX(100%);
     }
   }
 
