--- a/src/index.scss
+++ b/src/index.scss
@@ -3,32 +3,32 @@
 @tailwind utilities;
 
 :root {
-  --py-tooltip-bg-color: rgb(0 0 0 / 65%);
+  --py-tooltip-bg-color: rgba(0 0 0 / 65%);
   --py-tooltip-z-index: 1000;
   --py-notification-z-index: 1000;
 
   // checkbox radio bg color
-  --checkbox-radio-bg-color: rgb(33 16 118);
-  --checkbox-radio-bg-color-hover: rgb(33 16 118 / 50%);
-  --tooltip-bg-color: rgb(97 97 97 / 92%);
+  --checkbox-radio-bg-color: rgba(33 16 118);
+  --checkbox-radio-bg-color-hover: rgba(33 16 118 / 50%);
+  --tooltip-bg-color: rgba(43 41 41 / 92%);
 
   //
   --theme-bg-color: rgba(16 18 27 / 40%);
   --border-color: rgba(113 119 144 / 25%);
   --theme-color: #f9fafb;
-  --inactive-color: rgb(113 119 144 / 78%);
+  --inactive-color: rgba(113 119 144 / 78%);
   --body-font: 'Poppins', sans-serif;
   --hover-menu-bg: rgba(12 15 25 / 15%);
   --active-menu-bg: rgba(16 18 27 / 40%);
   --content-title-color: #999ba5;
-  --content-bg: rgb(146 151 179 / 13%);
-  --button-inactive: rgb(249 250 251 / 55%);
+  --content-bg: rgba(146 151 179 / 13%);
+  --button-inactive: rgba(249 250 251 / 55%);
   --dropdown-bg: #21242d;
-  --dropdown-hover: rgb(42 46 60);
-  --popup-bg: rgb(22 25 37);
+  --dropdown-hover: rgba(42 46 60);
+  --popup-bg: rgba(22 25 37);
   --search-bg: #14162b;
-  --overlay-bg: rgb(36 39 59 / 30%);
-  --scrollbar-bg: rgb(1 2 3 / 40%);
+  --overlay-bg: rgba(36 39 59 / 30%);
+  --scrollbar-bg: rgba(1 2 3 / 40%);
 
   #py-notification-collection {
     @apply fixed right-8 top-8;
