--- a/src/index.scss
+++ b/src/index.scss
@@ -17,8 +17,8 @@
   --border-color: rgba(113 119 144 / 25%);
   --theme-color: #f9fafb;
   --inactive-color: rgba(113 119 144 / 78%);
-  --body-font: 'Poppins', sans-serif;
   --hover-menu-bg: rgba(12 15 25 / 15%);
+  --focus-menu-bg: rgba(16 18 27 / 25%);
   --active-menu-bg: rgba(16 18 27 / 40%);
   --content-title-color: #999ba5;
   --content-bg: rgba(146 151 179 / 13%);
