chore(charts): add chart component

--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -1,3 +1,9 @@
+@import 'mixin';
+
 .py-modal-container {
   @apply m-auto w-[500px] rounded-lg bg-white shadow-lg;
+
+  .py-modal-title {
+    @include ellipsis(1);
+  }
 }
